--- a/index.html
+++ b/index.html
@@ -9,23 +9,33 @@
     </script>
     <title></title>
   </head>
-  <body align="center" bgcolor="#B2D8C0">
-  <h2 style="text-align:center">Profile Card</h2>
-<div class="cards">
-  <div class="mainDiv" onclick="newpage()">
-    <img src="images/praneeth.jpg" alt="praneeth" style="width:12em; height:15em; ">
-    <h2>Praneeth Kumar V</h2>
-    <p class="title">Software Trainee</p>
-    <p>A P S S D C</p>
+  <body align="center" bgcolor="#B2D8C0" class="indexBody">
+  <h2 style="text-align:center" id="heading">Profile Card</h2>
+  <div class="mainDiv">
+    <div class="childDiv" onclick="newpage()">
+      <img src="images/praneeth.jpg" alt="praneeth picture" class="image">
+      <div class="content">
+        <h2>Praneeth Kumar V</h2>
+        <p>Software Trainee</p>
+        <p>A P S S D C</p>
+      </div>
+    </div>
+    <div class="childDiv" onclick="jsonResume();">
+      <img src="images/santosh.jpg" alt="praneeth picture" class="image">
+      <div class="content">
+        <h2>Santosh S V S</h2>
+        <p>Software Trainee</p>
+        <p>A P S S D C</p>
+    </div>
   </div>
-
-  <div class="mainDiv" onclick="jsonResume()">
-  <a href="santoshresume1.html">  <img src="images/santosh.jpg" alt="santosh" style="width:12em; height:15em; "></a>
-    <h2>Santosh S V S</h2>
-    <p class="title">Junior Software Trainee</p>
-    <p>A P S S D C</p>
+  <div class="childDiv" onclick="level3Resume();">
+    <img src="images/praneeth1.jpg" alt="praneeth picture" class="image">
+    <div class="content">
+      <h2>Praneeth Kumar V</h2>
+      <p>Software Trainee</p>
+      <p>A P S S D C</p>
   </div>
-
+</div>
 </div>
 <a href="form.html"><p><button style="width:17em;">Create New</button></p></a>
 
