--- a/santosh_resume.html
+++ b/santosh_resume.html
@@ -16,12 +16,12 @@
         </div>
 
         <hr>
-        <div class="pdetails">
-          <div class="lchaild" id="sonof" ><p> </p></div>
-          <div class="lchaild" id="phone"><p> </p></div>
-          <div class="lchaild" id="email"><p> </p></div>
-          <div class="lchaild" id="address"><p> </p></div>
-          <div class="lchaild" id="languages"><p> </p></div>
+        <div class="pdetails" id="pdetails" >
+          <div class="lchaild"  ><p id="sonof"> </p></div>
+          <div class="lchaild" ><p id="phone"> </p></div>
+          <div class="lchaild" ><p id="email" ></p></div>
+          <div class="lchaild" ><p id="address"> </p></div>
+          <div class="lchaild" ><p id="languages"> </p></div>
         </div>
 
     </div>
